refactor(#58): Warring 코드 수정